[package]
name = "step_3_12"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.70"
dotenvy = "0.15.7"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
