[package]
name = "step_3_6"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
humantime-serde = "1.1.1"
serde = "1.0.159"
serde_json = "1.0.95"
serde_yaml = "0.9.19"
time = { version = "0.3.20", features = ["serde", "parsing", "formatting"] }
toml = "0.7.3"
url = { version = "2.3.1", features=["serde"] }
uuid = { version = "1.3.0", features=["serde"] }
